--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,7 @@
           <input type="password" id="password" placeholder="Enter your password" />
           <input type="email" id="email" placeholder= "Enter Email" />
           <input type="submit" value="SUBMIT" />
+          <div></div>
       </form>
   </div>
   <script>
